--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
     "compilerOptions": {
-        "baseUrl": ".",
-        "moduleResolution": "Bundler"
+        "baseUrl": "."
     },
     "include": [
         "../../common/scripts/**/*.ts",
